<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sheepzik</string>

    <!-- Facebook configuration -->
    <string name="facebook_app_id" translatable="false">1055317924581025</string>


    <!-- Pictures of Users -->
    <string-array name="titles" translatable="false">
        <item>Meme 1</item>
        <item>Meme 2</item>
        <item>Meme 3</item>
        <item>Meme 4</item>
        <item>Meme 5</item>
        <item>Meme 6</item>
        <item>Meme 7</item>
        <item>Meme 8</item>
        <item>Meme 9</item>
        <item>Meme 10</item>
    </string-array>

    <string-array name="decriptions" translatable="false">
        <item>This is description 1</item>
        <item>This is description 2</item>
        <item>This is description 3</item>
        <item>This is description 4</item>
        <item>This is description 5</item>
        <item>This is description 6</item>
        <item>This is description 7</item>
        <item>This is description 8</item>
        <item>This is description 9</item>
        <item>This is description 10</item>
    </string-array>


    <!-- Temporary -->
    <string name="launch_facebook_connection">Launch Facebook connection</string>

    <!-- Profile Page -->
    <string name="choose_your_music_taste">Choose your music taste</string>
    <string name="rock" translatable="false">rock</string>
    <string name="metal">metal</string>
    <string name="pop" translatable="false">pop</string>
    <string name="rap" translatable="false">rap</string>
    <string name="hiphop">hip-hop</string>
    <string name="all_tastes">Everything</string>
    <string name="set_range">Range limit for people around</string>
    <string name="delete_user_alert">Delete User</string>
    <string name="enter_name">"Enter your name: "</string>
    <string name="emtpy_string" translatable="false"/>
    <string name="more">more</string>
    <string name="button_confirm_logout">Log out</string>
    <string name="button_confirm_delete_account">Delete</string>


    <!-- Menu - Music taste picker -->
    <string name="menu_edit_name">Edit name</string>
    <string name="menu_edit_description">Edit description</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_delete_account">Delete account</string>


    <!-- Login connexion -->
    <string name="error_connexion_facebook">Error occurred while logging in,the server seems does not respond.Please
        try again. :) </string>
    <string name="connexion_facebook_pending" tools:ignore="UnusedResources">We are getting back your information,
        please wait :) </string>

    <string name="presentation_music" tools:ignore="UnusedResources"> Use your favorite music player as usual \n
    </string>
    <string name="presentation_people" tools:ignore="UnusedResources"> Find people around by music taste \n</string>
    <string name="presentation_interaction" tools:ignore="UnusedResources"> Have fun with your new mates ! :) \n
    </string>
    <string name="facebook_warning">We do not publish anything on Facebook with your account.</string>


    <!--Users Frag -->
    <string name="log_out_message">Log out of account?</string>
    <string name="delete_warning">Are you sure you want to delete your account? This will erase all records of you.</string>
    <string name="log_out_warning">Are you sure you want to log out of your account?</string>
    <string name="description_message">Enter a description</string>
    <string name="success_message">Operation completed successfully</string>
    <string name="profile_picture" translatable="false"/>
    <string name="no_user_facebook_page_found">Could not find this user on Facebook!</string>

    <!-- User Details Fragment -->
    <string name="facebook" translatable="false">Facebook</string>

    <!-- Music history fragment -->
    <string name="no_lastfm_page_found">No additional info about this song :(</string>

    <!-- MusicInfoService -->
    <string name="no_music_player_installed">You don’t have any compatible music player installed. Sorry :(</string>
    <string name="server_error_music_info">Could not retrieve the info about the currently playing
        music :(</string>


    <!-- TabLayout -->
    <string name="tabMap">Map</string>
    <string name="tabProfile">Profile</string>
    <string name="tabUsers">People</string>`
    <string name="default_description">Hi ! I\'m loving this app !</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_ok">OK</string>

</resources>