...
                    android:ellipsize="end"
                    android:gravity="center"
                    android:textColor="?attr/editTextColor"
                    android:textSize="26sp"/>

                <ImageButton
                    android:id="@+id/button_profile_radar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_below="@+id/user_description"
                    android:layout_centerHorizontal="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="?attr/colorPrimaryDark"
...
                    android:gravity="center"
                    android:maxLines="1"
                    android:textColor="@color/secondary_text"
                    android:textSize="13sp"/>

                <ImageButton
                    android:id="@+id/button_profile_music_tag"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_below="@+id/user_description"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@+id/user_profile_photo"
...
                    android:maxLines="1"
                    android:text="@string/more"
                    android:textColor="@color/secondary_text"
                    android:textSize="13sp"/>

                <ImageButton
                    android:id="@+id/button_profile_menu"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignLeft="@+id/tv_profile_menu"
                    android:layout_alignStart="@+id/tv_profile_menu"
                    android:layout_below="@+id/user_description"
                    android:layout_marginLeft="6dp"
...
