<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".view.activity.MainActivity">


    <TextView
        android:id="@+id/facebook_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/facebook_warning"
        android:textAlignment="center"/>

    <View
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:layout_above="@+id/facebook_warning"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp"
        android:background="#000"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/line"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="17dp"
        android:contentDescription="@string/launch_facebook_connection"/>

    <FrameLayout
        android:id="@+id/containFragmentPresentation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="38dp">
    </FrameLayout>


</RelativeLayout>